yunikorn/config/yunikorn-admission-controller-validations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: yunikorn
  name: yunikorn-admission-controller-validations
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZIakNDQXdhZ0F3SUJBZ0lIQmtqTHNtRVFUekFOQmdrcWhraUc5dzBCQVFzRkFEQWVNUnd3R2dZRFZRUUsKRXhONWRXNXBhMjl5Ymk1aGNHRmphR1V1YjNKbk1CNFhEVEkyTURFeU1EQTJNRGMwT0ZvWERUSTJNRGN5TURBMgpNVEkwT0Zvd0hqRWNNQm9HQTFVRUNoTVRlWFZ1YVd0dmNtNHVZWEJoWTJobExtOXlaekNDQWlJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnSVBBRENDQWdvQ2dnSUJBTXVvYVVXZk9nenJkVzd2OWl4OTc0MDVONENhaXBRaEdQN3kKT0RTbS95WWZUU3ZHeWJzQTQvZm1melZUNHB5dllWVXVKb0NuYVhXLzlsUitIQllNVElrNG0rK29UL1NnQU9uOQpsTFBqTlltZVZJWT [...]
    service:
      name: yunikorn-admission-controller-service
      namespace: yunikorn
      path: /validate-conf
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: admission-webhook.yunikorn.validate-conf
  namespaceSelector:
    matchLabels:
      kubernetes.io/metadata.name: default
  objectSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - configmaps
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
